--- a/loginPage.html
+++ b/loginPage.html
@@ -60,6 +60,6 @@
         >
       </div>
     </div>
-    <script src="login.js"></script>
+    <script src="loginPage.js"></script>
   </body>
 </html>
